# baana-scr

./: .gitignore  LICENSE  README.md  baana-scr.cabal
app/: Main.hs
src/: DB.hs  Lib.hs  Scrape.hs
