name:                baana-scr
version:             0.2.0.0
synopsis:            Baana-scraper.
description:         Scrapes the baana cyclist count and writes the value to an sqlite-database.
homepage:            https://github.com/paasim/baana-scr#readme
license:             BSD3
license-file:        LICENSE
author:              Markus Paasiniemi
maintainer:          paasim@iki.fi
copyright:           2017, Markus Paasiniemi
category:            Web, Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DB
                     , Scrape
  build-depends:       base >= 4.7 && < 5
                     , HTTP
                     , sqlite-simple
                     , tagsoup
                     , time
  default-language:    Haskell2010

executable baana-scr-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
  build-depends:       base
                     , baana-scr
  default-language:    Haskell2010

test-suite baana-scr-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , baana-scr
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/paasim/baana-scr
